Adjust for TD in all but one project